extends VBoxContainer

func _ready():
	pass



func _on_not_button_down():
	pass # Replace with function body.


func _on_and_button_down():
	pass # Replace with function body.


func _on_nand_button_down():
	pass # Replace with function body.


func _on_or_button_down():
	pass # Replace with function body.


func _on_nor_button_down():
	pass # Replace with function body.


func _on_xor_button_down():
	pass # Replace with function body.
